[project]
name = "ctf-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "datasets==5.0.0",
    "dill==0.4.1",
    "filelock==3.29.4",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "huggingface_hub==1.19.0",
    "idna==3.18",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "propcache==0.5.2",
    "pyarrow==24.0.0",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.68.2",
    "typing_extensions==4.15.0",
    "urllib3==2.7.0",
    "xxhash==3.7.0",
    "yarl==1.24.2",
]
